<resources>
    <string name="app_name">Ru-En Translator</string>
    <string name="planet_prompt">Choose a planet</string>
    <string name="enter_text">Enter text</string>
    <string name="or">Or</string>
    <string name="say_something">Say Something</string>
    <string name="translate">Go</string>
    <string name="translated_text">Translated Text</string>
    <string name="HeaderText">Ru-En Translator</string>
    <string name="auto_translate">Auto Translating</string>

</resources>